@@ -406,23 +406,6 @@ struct padthv1_ctl
 };
 
 
-// internal control
-
-struct padthv1_aux
-{
-	padthv1_aux() { reset(); }
-
-	void reset()
-	{
-		panning = 0.0f;
-		volume = 1.0f;
-	}
-
-	float panning;
-	float volume;
-};
-
-
 // dco
 
 struct padthv1_gen
@@ -673,26 +656,47 @@ protected:
 };
 
 
-// panning smoother (3 parameters)
+// balance smoother (1 parameters)
 
-class padthv1_pan : public padthv1_ramp3
+class padthv1_bal1 : public padthv1_ramp1
 {
 public:
 
-	padthv1_pan() : padthv1_ramp3(2) {}
+	padthv1_bal1() : padthv1_ramp1(2) {}
 
 protected:
 
 	float evaluate(uint16_t i)
 	{
-		padthv1_ramp3::update();
+		padthv1_ramp1::update();
 
-		const float wpan = 0.25f * M_PI
+		const float wbal = 0.25f * M_PI
+			* (1.0f + m_param1_v);
+
+		return M_SQRT2 * (i & 1 ? ::sinf(wbal) : ::cosf(wbal));
+	}
+};
+
+
+// balance smoother (2 parameters)
+
+class padthv1_bal2 : public padthv1_ramp2
+{
+public:
+
+	padthv1_bal2() : padthv1_ramp2(2) {}
+
+protected:
+
+	float evaluate(uint16_t i)
+	{
+		padthv1_ramp2::update();
+
+		const float wbal = 0.25f * M_PI
 			* (1.0f + m_param1_v)
-			* (1.0f + m_param2_v)
-			* (1.0f + m_param3_v);
+			* (1.0f + m_param2_v);
 
-		return M_SQRT2 * (i == 0 ? ::cosf(wpan) : ::sinf(wpan));
+		return M_SQRT2 * (i & 1 ? ::sinf(wbal) : ::cosf(wbal));
 	}
 };
 
@@ -783,6 +787,12 @@ struct padthv1_voice : public padthv1_list<padthv1_voice>
 	padthv1_glide gen1_glide1, gen1_glide2;		// glides (portamento)
 
 	padthv1_pre dca1_pre;
+
+	float out1_panning;
+	float out1_volume;
+
+	padthv1_bal1  out1_pan;						// output panning
+	padthv1_ramp1 out1_vol;						// output volume
 
 	bool sustain;
 };
@@ -946,11 +956,9 @@ private:
 	padthv1_list<padthv1_voice> m_free_list;
 	padthv1_list<padthv1_voice> m_play_list;
 
-	padthv1_aux   m_aux1;
-
 	padthv1_ramp1 m_wid1;
-	padthv1_pan   m_pan1;
-	padthv1_ramp4 m_vol1;
+	padthv1_bal2  m_pan1;
+	padthv1_ramp3 m_vol1;
 
 	float  **m_sfxs;
 	uint32_t m_nsize;
@@ -1245,8 +1253,7 @@ void padthv1_impl::setParamPort ( padthv1::ParamIndex index, float *pfParam )
 		m_vol1.reset(
 			m_out1.volume.value_ptr(),
 			m_dca1.volume.value_ptr(),
-			&m_ctl1.volume,
-			&m_aux1.volume);
+			&m_ctl1.volume);
 		break;
 	case padthv1::OUT1_WIDTH:
 		m_wid1.reset(
@@ -1255,8 +1262,7 @@ void padthv1_impl::setParamPort ( padthv1::ParamIndex index, float *pfParam )
 	case padthv1::OUT1_PANNING:
 		m_pan1.reset(
 			m_out1.panning.value_ptr(),
-			&m_ctl1.panning,
-			&m_aux1.panning);
+			&m_ctl1.panning);
 		break;
 	default:
 		break;
@@ -1520,6 +1526,12 @@ void padthv1_impl::process_midi ( uint8_t *data, uint32_t size )
 					= uint32_t(*m_gen1.glide2 * *m_gen1.glide2 * m_srate);
 				pv->gen1_glide1.reset(gen1_frames1, pv->gen1_freq1);
 				pv->gen1_glide2.reset(gen1_frames2, pv->gen1_freq2);
+				// panning
+				pv->out1_panning = 0.0f;
+				pv->out1_pan.reset(&pv->out1_panning);
+				// volume
+				pv->out1_volume = 0.0f;
+				pv->out1_vol.reset(&pv->out1_volume);
 				// sustain
 				pv->sustain = false;
 				// allocated
@@ -1669,8 +1681,6 @@ void padthv1_impl::allNotesOff (void)
 
 	gen1_last1 = gen1_last2 = 0.0f;
 
-	m_aux1.reset();
-
 	m_direct_note = 0;
 }
 
@@ -1775,12 +1785,10 @@ void padthv1_impl::reset (void)
 	m_vol1.reset(
 		m_out1.volume.value_ptr(),
 		m_dca1.volume.value_ptr(),
-		&m_ctl1.volume,
-		&m_aux1.volume);
+		&m_ctl1.volume);
 	m_pan1.reset(
 		m_out1.panning.value_ptr(),
-		&m_ctl1.panning,
-		&m_aux1.panning);
+		&m_ctl1.panning);
 	m_wid1.reset(
 		m_out1.width.value_ptr());
 
@@ -1982,14 +1990,17 @@ void padthv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 				const float mid1 = 0.5f * (mod1 + mod2);
 				const float sid1 = 0.5f * (mod1 - mod2);
 				const float vol1 = vel1 * m_vol1.value(j)
-					* pv->dca1_env.tick();
+					* pv->dca1_env.tick()
+					* pv->out1_vol.value(j);
 
 				// outputs
 
-				const float out1
-					= vol1 * (mid1 + sid1 * wid1) * m_pan1.value(j, 0);
-				const float out2
-					= vol1 * (mid1 - sid1 * wid1) * m_pan1.value(j, 1);
+				const float out1 = vol1 * (mid1 + sid1 * wid1)
+					* pv->out1_pan.value(j, 0)
+					* m_pan1.value(j, 0);
+				const float out2 = vol1 * (mid1 - sid1 * wid1)
+					* pv->out1_pan.value(j, 1)
+					* m_pan1.value(j, 1);
 
 				for (k = 0; k < m_nchannels; ++k) {
 					const float dry = (k & 1 ? out2 : out1);
@@ -2000,8 +2011,8 @@ void padthv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 
 				if (j == 0) {
 					pv->gen1_balance = lfo1 * *m_lfo1.balance;
-					m_aux1.panning = lfo1 * *m_lfo1.panning;
-					m_aux1.volume  = lfo1 * *m_lfo1.volume + 1.0f;
+					pv->out1_panning = lfo1 * *m_lfo1.panning;
+					pv->out1_volume  = lfo1 * *m_lfo1.volume + 1.0f;
 				}
 			}
 
@@ -2011,6 +2022,8 @@ void padthv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 
 			pv->gen1_bal.process(ngen);
 			pv->dca1_pre.process(ngen);
+			pv->out1_pan.process(ngen);
+			pv->out1_vol.process(ngen);
 
 			// envelope countdowns
 
